--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,24 @@
 * {
   box-sizing: border-box;
 }
+/*Portals*/
+#root ~ div .portal {
+  background: rgba(0, 0, 0, 0.4);
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+#root ~ div .portal > * {
+  background: white;
+  padding: 1rem;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+}
 summary > * {
   display: inline-block;
   cursor: pointer;
